<resources>
    <string name="app_name">FragmentSub</string>
    <string name="registration_title">Inscription</string>
    <string name="summary_title">Synthese des donnees</string>

    <string name="hint_login">Login</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prenom</string>
    <string name="hint_date_naissance">Date de naissance (JJ/MM/AAAA)</string>
    <string name="hint_telephone">Telephone</string>
    <string name="hint_email">Adresse mail</string>
    <string name="hint_adresse">Adresse</string>

    <string name="label_interests">Centres d\'interet</string>
    <string name="interest_sport">Sport</string>
    <string name="interest_musique">Musique</string>
    <string name="interest_lecture">Lecture</string>
    <string name="action_submit">Soumettre</string>

    <string name="error_required_fields">Veuillez remplir tous les champs obligatoires.</string>
    <string name="error_invalid_email">Veuillez saisir une adresse mail valide.</string>
    <string name="error_no_interest">Veuillez choisir au moins un centre d\'interet.</string>
    <string name="error_db_insert">Erreur lors de l\'enregistrement en base.</string>
    <string name="success_saved">Inscription enregistree avec succes.</string>

    <string name="summary_saved_id">ID en base: %1$d</string>
    <string name="summary_login">Login: %1$s</string>
    <string name="summary_password">Mot de passe: %1$s</string>
    <string name="summary_nom">Nom: %1$s</string>
    <string name="summary_prenom">Prenom: %1$s</string>
    <string name="summary_date_naissance">Date de naissance: %1$s</string>
    <string name="summary_telephone">Telephone: %1$s</string>
    <string name="summary_email">Adresse mail: %1$s</string>
    <string name="summary_adresse">Adresse: %1$s</string>
    <string name="summary_interets">Centres d\'interet: %1$s</string>
</resources>